--- a/.gitignore
+++ b/.gitignore
@@ -7,8 +7,7 @@
 # Ignore bundler config.
 /.bundle
 
-# Ignore the default SQLite database.
-/db/*.sqlite3
+# Ignore non-data  SQLite files.
 /db/*.sqlite3-*
 
 # Ignore all logfiles and tempfiles.
