migration to postgres working

--- a/config/database.yml
+++ b/config/database.yml
@@ -7,8 +7,14 @@ default: &default
   timeout: 5000
 
 development:
-  <<: *default
-  database: paprika_webview_development
+  primary:
+    <<: *default
+    database: paprika_webview_development
+  primary_replica:
+    <<: *default
+    adapter: sqlite3
+    database: db/development.sqlite3
+    replica: true
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
